# testing_cmake

./: CMakeLists.txt~  CmakeLists.txt~  a.out
lib/: libcairo-gobject.la  libcairo-gobject.so.2.11200.10  libcairo-script-interpreter.la  libcairo-script-interpreter.so.2
lib/cairo/: libcairo-trace.la  libcairo-trace.so.0.0.0
lib/pkgconfig/: cairo-fc.pc  cairo-ft.pc  cairo-pdf.pc  cairo-png.pc  cairo-ps.pc  cairo-script.pc  cairo-svg.pc  cairo-xcb.pc  cairo-xlib-xrender.pc  cairo-xlib.pc  cairo.pc
share/gtk-doc/html/cairo/: cairo-PostScript-Surfaces.html  cairo-cairo-device-t.html  cairo-cairo-scaled-font-t.html  cairo-cairo-t.html
src/: main.cpp
zbuild/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  Stl_test  cmake_install.cmake  make_clean.sh  make_project.sh
